# sim_render

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
examples/: render_in_notebooks.py
sim_render/: __init__.py  glb_builder.py  gym.py  model_builder.py  mujoco.py  mujoco_export.py  viewer.py
sim_render/export/: __init__.py  glb.py
simrender/: __init__.py  gym.py  mujoco.py  viewer.py
simrender/export/: glb.py
tests/: __init__.py  test_gym.py  test_model_builder.py  test_mujoco.py
