[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim_render"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pillow>=10.4.0",
    "pygltflib",
]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "gymnasium>=1.1.1",
    "imageio>=2.35.1",
    "marimo>=0.8.22",
    "mujoco>=3.2.3",
    "pytest>=8.3.5",
    "ruff>=0.12.4",
    "ty>=0.0.1a14",
]
