[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simrender"
version = "0.1.0"
authors = [
  { name="Carlos Diaz-Padron", email="carlos@carlosdp.xyz" },
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT OR Apache-2.0"
license-files = ["LICEN[CS]E*"]
classifiers = [
  "Programming Language :: Python :: 3"
]
dependencies = [
    "numpy",
    "pillow>=10.4.0",
    "pygltflib",
]

[project.urls]
Repository = "https://github.com/carlosdp/simrender"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "gymnasium>=1.1.1",
    "imageio>=2.35.1",
    "marimo>=0.8.22",
    "mujoco>=3.2.3",
    "pytest>=8.3.5",
    "ruff>=0.12.4",
    "ty>=0.0.1a14",
]
